--- a/custom.css
+++ b/custom.css
@@ -1,9 +1,10 @@
+@import url('http://fonts.googleapis.com/css?family=Amiri|Cairo');
 
 .title{
 direction: rtl;
 padding-right: 2cm;
 line-height:10px;
-font-family:farah;
+font-family:Cairo;
 
 }
 
@@ -14,7 +15,7 @@ line-height:40px;
 padding-right: 1cm;
 padding-left: 1cm;
 text-align:justify;
-font-family:molhim;
+font-family:Amiri;
 }
 
 .horizontal{
