--- a/custom.css
+++ b/custom.css
@@ -1,10 +1,10 @@
-@import url('http://fonts.googleapis.com/css?family=Amiri|Cairo');
+@import url('http://fonts.googleapis.com/css?family=Amiri|Lalezar');
 
 .title{
 direction: rtl;
 padding-right: 2cm;
 line-height:10px;
-font-family:Cairo;
+font-family:Lalezar;
 
 }
 
