removed my name from the book title and did little change on subtitle format

--- a/custom.css
+++ b/custom.css
@@ -4,7 +4,7 @@
 .title{
 direction: rtl;
 font-size:100px;
-padding-right: 2cm;
+padding-right: 15px;
 line-height:10px;
 font-family:basim-marah;
 
