--- a/site/css/main.css
+++ b/site/css/main.css
@@ -5,7 +5,7 @@
   }
 
 body{
-    width:800px;
+    width:1200px;
     background-color: lightgrey;
     border: 1px solid black;
     margin:20px auto auto;
@@ -25,9 +25,14 @@ img.coverpage{
     width:100%;
     height:100%;
 }
+img.author{
+    width:300px;
+    height:auto;
+    margin-bottom: 30px;
+}
 .container{
     display:grid;
-    grid-template-columns:  200px auto;
+    grid-template-columns:  300px auto;
     grid-gap:0px;
 }
 .content_table{
