--- a/site/css/main.css
+++ b/site/css/main.css
@@ -16,10 +16,9 @@ div{
     margin:auto
 }
 h1{
-    font-size: 30px;
+    font-size: 40px;
     text-align: center;
     font-family: "Arslan";
-    font-weight: bold;
 }
 img.coverpage{
     width:100%;
@@ -34,8 +33,14 @@ img.author{
     display:grid;
     grid-template-columns:  300px auto;
     grid-gap:0px;
+    background:whitesmoke;
 }
 .content_table{
     background-color: rgb(175, 186, 197);
     margin:0px;
+}
+p{
+    margin:40px;
+    text-align: justify;
+    font-size: 20px;
 }
