--- a/site/css/main.css
+++ b/site/css/main.css
@@ -5,42 +5,70 @@
   }
 
 body{
-    width:1200px;
     background-color: lightgrey;
-    border: 1px solid black;
     margin:20px auto auto;
     direction:rtl;
     font-family:"amiri-quran";
+    font-size:20px;
 }
-div{
-    margin:auto
-}
+
 h1{
     font-size: 40px;
     text-align: center;
     font-family: "Arslan";
+    margin-top:50px;
+}
+h2{
+    font-size: 35px;
+    font-family: "Arslan";
+    margin:40px 40px 10px 10px;
+
+}
+h3{
+    font-size: 30px;
+    font-family: "Arslan";
+    margin:30px 50px 10px 10px;
+
+}
+a.text{
+    margin:30px 50px 10px 10px;
 }
 img.coverpage{
     width:100%;
-    height:100%;
+    height:auto;
 }
 img.author{
-    width:300px;
+    width:100%;
     height:auto;
     margin-bottom: 30px;
 }
+img.text {
+    display:block;
+    margin:20px auto 20px auto;
+    width:80%;
+}
 .container{
     display:grid;
-    grid-template-columns:  300px auto;
+    grid-template-columns:  300px minmax(500px,1024px);
     grid-gap:0px;
     background:whitesmoke;
+}
+@media(max-width:800px){
+    .container{
+        grid-template-columns: 1fr;
+    }
 }
 .content_table{
     background-color: rgb(175, 186, 197);
     margin:0px;
 }
 p{
-    margin:40px;
+    margin:10px 40px 10px 40px;
+    text-align: justify;
+    font-size: 20px;
+}
+ol.text{
+    margin:10px 40px 10px 40px;
     text-align: justify;
     font-size: 20px;
 }
